--- a/app/src/main/res/layout/activity_add_record.xml
+++ b/app/src/main/res/layout/activity_add_record.xml
@@ -4,24 +4,33 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:gravity="center"
     android:orientation="vertical"
     android:padding="15dp"
     tools:context=".AddRecord">
+
+    <TextView
+        android:id="@+id/textView2"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="10dp"
+        android:text="Add Maintenance Record:"
+        android:textSize="24sp"
+        android:textStyle="bold" />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="5dp"
         android:gravity="center"
-        android:orientation="horizontal">
+        android:orientation="vertical">
 
         <TextView
             android:id="@+id/textView8"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginRight="5dp"
             android:layout_weight="0"
-            android:text="Date of Maintenance:"
+            android:text="Date of Work:"
             android:textSize="20sp" />
 
         <EditText
@@ -47,14 +56,12 @@
         android:layout_marginBottom="5dp"
         android:layout_weight="0"
         android:gravity="center"
-        android:orientation="horizontal">
+        android:orientation="vertical">
 
         <TextView
             android:id="@+id/textView9"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginRight="5dp"
-            android:layout_weight="0"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:text="Title:"
             android:textSize="20sp" />
 
@@ -73,14 +80,12 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="5dp"
         android:gravity="center"
-        android:orientation="horizontal">
+        android:orientation="vertical">
 
         <TextView
             android:id="@+id/textView10"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginRight="5dp"
-            android:layout_weight="0"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:text="Vehicle:"
             android:textSize="20sp" />
 
@@ -89,7 +94,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:minHeight="48dp"
-            android:scrollbarSize="20dp" />
+            android:scrollbarSize="20dp"
+            android:spinnerMode="dialog" />
     </LinearLayout>
 
     <LinearLayout
@@ -97,14 +103,12 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="5dp"
         android:gravity="center"
-        android:orientation="horizontal">
+        android:orientation="vertical">
 
         <TextView
             android:id="@+id/textView11"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginRight="5dp"
-            android:layout_weight="0"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:text="Odometer:"
             android:textSize="20sp" />
 
@@ -124,21 +128,19 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="10dp"
         android:gravity="center"
-        android:orientation="horizontal">
+        android:orientation="vertical">
 
         <TextView
             android:id="@+id/textView12"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginRight="5dp"
-            android:layout_weight="0"
-            android:text="Description:"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:text="Notes:"
             android:textSize="20sp" />
 
         <EditText
             android:id="@+id/record_input_description"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:ems="10"
             android:gravity="start|top"
             android:hint="(Optional)"
@@ -148,10 +150,10 @@
     </LinearLayout>
 
     <Button
-        android:theme="@style/ButtonTheme"
         android:id="@+id/add_record_btn"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Add Record" />
+        android:text="Add Record"
+        android:theme="@style/ButtonTheme" />
 
 </LinearLayout>
