--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -12,15 +12,8 @@
         android:id="@+id/visual_settings"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:gravity="top"
         android:orientation="vertical">
-
-        <TextView
-            android:id="@+id/textView36"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Visuals"
-            android:textSize="24sp"
-            android:textStyle="bold" />
 
         <Switch
             android:id="@+id/dark_mode_switch"
@@ -89,27 +82,14 @@
 
     </LinearLayout>
 
-    <View
-        android:id="@+id/divider2"
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:background="?android:attr/listDivider" />
-
     <LinearLayout
-        android:id="@+id/update_profile_settings"
+        android:id="@+id/settings"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
         android:layout_marginBottom="5dp"
+        android:gravity="top"
         android:orientation="vertical">
-
-        <TextView
-            android:id="@+id/textView38"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Update Profile"
-            android:textSize="24sp"
-            android:textStyle="bold" />
 
         <Button
             android:id="@+id/update_profile_btn"
@@ -117,27 +97,20 @@
             android:layout_height="wrap_content"
             android:text="Update Profile"
             android:theme="@style/ButtonTheme" />
-    </LinearLayout>
 
-    <View
-        android:id="@+id/divider"
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:background="?android:attr/listDivider" />
-
-    <LinearLayout
-        android:id="@+id/logout_settings"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
-
-        <TextView
-            android:id="@+id/textView45"
+        <Button
+            android:id="@+id/reset_pswd_btn"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Log Out of App"
-            android:textSize="24sp"
-            android:textStyle="bold" />
+            android:text="Reset Password"
+            android:theme="@style/ButtonTheme" />
+
+        <Button
+            android:id="@+id/delete_account_btn"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Delete Account"
+            android:theme="@style/ButtonTheme" />
 
         <Button
             android:id="@+id/settings_logout_btn"
@@ -145,6 +118,20 @@
             android:layout_height="wrap_content"
             android:text="Log Out"
             android:theme="@style/ButtonTheme" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/version_details"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/textView37"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:gravity="bottom|center"
+            android:text="Version 0.2 - 10/20/2022" />
     </LinearLayout>
 
 </LinearLayout>
