--- a/app/src/main/res/layout/popup_compare_databases.xml
+++ b/app/src/main/res/layout/popup_compare_databases.xml
@@ -15,7 +15,7 @@
         android:layout_margin="5dp"
         android:layout_marginBottom="10dp"
         android:gravity="center"
-        android:text="Local and remote data do not match!"
+        android:text="Local and cloud data do not match!"
         android:textSize="24sp"
         android:textStyle="bold" />
 
@@ -99,7 +99,7 @@
             android:layout_height="wrap_content"
             android:layout_margin="5dp"
             android:layout_marginLeft="5dp"
-            android:text="Remote" />
+            android:text="Cloud" />
     </LinearLayout>
 
     <Button
