--- a/app/src/main/res/layout/popup_filter_records.xml
+++ b/app/src/main/res/layout/popup_filter_records.xml
@@ -7,7 +7,7 @@
     android:padding="15dp">
 
     <TextView
-        android:id="@+id/textView31"
+        android:id="@+id/filter_records_title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="5dp"
