--- a/app/src/main/res/layout/record_view.xml
+++ b/app/src/main/res/layout/record_view.xml
@@ -7,7 +7,7 @@
 
     <TextView
         android:id="@+id/record_date"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginRight="10dp"
         android:layout_weight="1"
@@ -16,15 +16,16 @@
 
     <TextView
         android:id="@+id/record_title"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginRight="10dp"
+        android:layout_marginBottom="5dp"
         android:text="Title"
         android:textSize="24sp" />
 
     <TextView
         android:id="@+id/record_vehicle"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginRight="10dp"
         android:layout_weight="1"
@@ -34,13 +35,14 @@
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
+        android:layout_marginBottom="5dp"
         android:orientation="horizontal">
 
         <TextView
             android:id="@+id/record_odometer"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginRight="10dp"
+            android:layout_marginRight="5dp"
             android:layout_weight="1"
             android:text="Odometer"
             android:textSize="20sp" />
@@ -54,10 +56,26 @@
             android:textSize="20sp" />
     </LinearLayout>
 
-    <TextView
-        android:id="@+id/record_description"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Description"
-        android:textSize="16sp" />
+        android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/textView31"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginRight="5dp"
+            android:text="Notes:"
+            android:textSize="16sp" />
+
+        <TextView
+            android:id="@+id/record_description"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingStart="10dp"
+            android:text="Notes"
+            android:textSize="16sp" />
+    </LinearLayout>
+
 </LinearLayout>
