Update: - Changed most things over to Material Design 3 for cosmetic purposes. - Nothing backend updated. - Version 0.6 - 4/7/2023
(Previous)
- Fixed a lot of bugs.
- Added offline persistence so you can still use the app while not connected to the internet.
- Signing out while offline looses any changes made, but user is warned of this.
- Version 0.4 - 11/1/2022

--- a/app/src/main/res/layout-land/activity_add_record.xml
+++ b/app/src/main/res/layout-land/activity_add_record.xml
@@ -46,7 +46,7 @@
                 android:ems="10"
                 android:focusable="true"
                 android:focusableInTouchMode="false"
-                android:hint="2004/01/31"
+                android:hint="2004-01-31"
                 android:inputType="date"
                 android:minHeight="48dp"
                 android:textSize="20sp" />
