--- a/app/src/main/res/layout-land/popup_edit_record.xml
+++ b/app/src/main/res/layout-land/popup_edit_record.xml
@@ -49,7 +49,7 @@
                     android:ems="10"
                     android:focusable="false"
                     android:focusableInTouchMode="false"
-                    android:hint="2004/01/31"
+                    android:hint="2004-01-31"
                     android:inputType="date"
                     android:minHeight="48dp"
                     android:textSize="20sp" />
