--- a/app/src/main/res/layout/activity_add_record.xml
+++ b/app/src/main/res/layout/activity_add_record.xml
@@ -10,168 +10,178 @@
         android:layout_height="wrap_content"
         android:gravity="center"
         android:orientation="vertical"
-        android:padding="15dp"
         tools:context=".AddRecord">
 
-        <TextView
-            android:id="@+id/textView2"
+        <androidx.appcompat.widget.Toolbar
+            android:id="@+id/add_record_tb"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="10dp"
-            android:text="Add Maintenance Record:"
-            android:textSize="24sp"
-            android:textStyle="bold" />
+            android:background="?attr/colorPrimary"
+            android:minHeight="?attr/actionBarSize"
+            android:theme="@style/ToolbarTheme" />
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="15dp"
+            android:layout_marginTop="15dp"
+            android:layout_marginRight="15dp"
             android:layout_marginBottom="5dp"
-            android:gravity="center"
-            android:orientation="vertical"
-            android:padding="5dp">
+            android:gravity="center">
 
-            <TextView
-                android:id="@+id/textView8"
-                android:layout_width="match_parent"
+            <Button
+                android:id="@+id/date_button"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_weight="0"
-                android:text="Date of Work:"
-                android:textSize="20sp" />
+                android:layout_marginEnd="10dp"
+                android:text="Select Date" />
 
-            <EditText
+            <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/record_date_input"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_weight="0"
                 android:clickable="false"
                 android:cursorVisible="false"
-                android:ems="10"
                 android:focusable="true"
                 android:focusableInTouchMode="false"
-                android:hint="2004/01/31"
-                android:inputType="date"
-                android:minHeight="48dp"
-                android:textSize="20sp" />
+                android:hint="Date of Work">
+
+                <com.google.android.material.textfield.TextInputEditText
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:clickable="false"
+                    android:cursorVisible="false"
+                    android:focusable="true"
+                    android:focusableInTouchMode="false" />
+
+            </com.google.android.material.textfield.TextInputLayout>
 
         </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="15dp"
+            android:layout_marginTop="5dp"
+            android:layout_marginRight="15dp"
             android:layout_marginBottom="5dp"
             android:layout_weight="0"
             android:gravity="center"
-            android:orientation="vertical"
-            android:padding="5dp">
+            android:orientation="vertical">
 
-            <TextView
-                android:id="@+id/textView9"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:text="Title:"
-                android:textSize="20sp" />
-
-            <EditText
+            <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/record_title_input"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:ems="10"
-                android:hint="Oil Change"
-                android:inputType="textPersonName"
-                android:textSize="20sp" />
+                android:hint="Record Title">
+
+                <com.google.android.material.textfield.TextInputEditText
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:inputType="text"
+                    />
+            </com.google.android.material.textfield.TextInputLayout>
+
         </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="15dp"
+            android:layout_marginTop="5dp"
+            android:layout_marginRight="15dp"
             android:layout_marginBottom="5dp"
             android:gravity="center"
-            android:orientation="vertical"
-            android:padding="5dp">
+            android:orientation="vertical">
 
-            <TextView
-                android:id="@+id/textView10"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:text="Vehicle:"
-                android:textSize="20sp" />
-
-            <Spinner
-                android:id="@+id/record_vehicle_spinner"
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/record_vehicle_picker"
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:minHeight="48dp"
-                android:scrollbarSize="20dp"
-                android:spinnerMode="dialog"
-                tools:ignore="SpeakableTextPresentCheck" />
+                android:clickable="false"
+                android:cursorVisible="false"
+                android:focusable="true"
+                android:focusableInTouchMode="false"
+                android:hint="Vehicle">
+
+                <AutoCompleteTextView
+                    android:id="@+id/outlined_exposed_dropdown_editable"
+                    android:layout_height="wrap_content"
+                    android:layout_width="match_parent"
+                    android:clickable="false"
+                    android:cursorVisible="false"
+                    android:focusable="true"
+                    android:focusableInTouchMode="false"
+                    />
+            </com.google.android.material.textfield.TextInputLayout>
         </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="15dp"
+            android:layout_marginTop="5dp"
+            android:layout_marginRight="15dp"
             android:layout_marginBottom="5dp"
             android:gravity="center"
-            android:orientation="vertical"
-            android:padding="5dp">
+            android:orientation="vertical">
 
-            <TextView
-                android:id="@+id/textView11"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:text="Odometer:"
-                android:textSize="20sp" />
-
-            <EditText
-                android:id="@+id/record_input_odometer"
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/record_odometer_input"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:ems="10"
-                android:hint="123456"
-                android:inputType="number"
-                android:minHeight="48dp"
-                android:textSize="20sp" />
+                android:hint="Odometer Reading">
+
+                <com.google.android.material.textfield.TextInputEditText
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:inputType="number"
+                    />
+
+            </com.google.android.material.textfield.TextInputLayout>
         </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="10dp"
+            android:layout_marginLeft="15dp"
+            android:layout_marginTop="5dp"
+            android:layout_marginRight="15dp"
+            android:layout_marginBottom="5dp"
             android:gravity="center"
-            android:orientation="vertical"
-            android:padding="5dp">
+            android:orientation="vertical">
 
-            <TextView
-                android:id="@+id/textView12"
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/record_notes_input"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:text="Notes:"
-                android:textSize="20sp" />
+                android:layout_height="wrap_content"
+                android:hint="Notes (Optional)">
 
-            <EditText
-                android:id="@+id/record_input_description"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:ems="10"
-                android:gravity="start|top"
-                android:hint="(Optional)"
-                android:inputType="textMultiLine"
-                android:minHeight="48dp"
-                android:textSize="20sp" />
+                <com.google.android.material.textfield.TextInputEditText
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:inputType="textMultiLine"
+                    />
+            </com.google.android.material.textfield.TextInputLayout>
         </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:layout_marginLeft="15dp"
+            android:layout_marginTop="5dp"
+            android:layout_marginRight="15dp"
+            android:layout_marginBottom="5dp"
             android:gravity="center"
             android:orientation="vertical"
-            android:padding="5dp"
             app:theme="@style/AppTheme.Buttons">
 
             <Button
                 android:id="@+id/add_record_btn"
                 android:layout_width="@dimen/min_btn_width"
                 android:layout_height="wrap_content"
-                android:text="Add Record" />
+                android:text="Finish" />
         </LinearLayout>
 
     </LinearLayout>
