--- a/app/src/main/res/layout/popup_edit_record.xml
+++ b/app/src/main/res/layout/popup_edit_record.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -30,29 +29,34 @@
                 android:layout_height="match_parent"
                 android:layout_marginBottom="5dp"
                 android:gravity="center"
-                android:orientation="vertical"
                 android:padding="5dp">
 
-                <TextView
-                    android:id="@+id/textView13"
-                    android:layout_width="match_parent"
+                <Button
+                    android:id="@+id/edit_date_button"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Date of Work:"
-                    android:textSize="20sp" />
+                    android:layout_marginEnd="10dp"
+                    android:text="Select Date" />
 
-                <EditText
+                <com.google.android.material.textfield.TextInputLayout
                     android:id="@+id/edit_record_date_input"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:clickable="false"
                     android:cursorVisible="false"
-                    android:ems="10"
-                    android:focusable="false"
+                    android:focusable="true"
                     android:focusableInTouchMode="false"
-                    android:hint="2004/01/31"
-                    android:inputType="date"
-                    android:minHeight="48dp"
-                    android:textSize="20sp" />
+                    android:hint="Date of Work">
+
+                    <com.google.android.material.textfield.TextInputEditText
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:clickable="false"
+                        android:cursorVisible="false"
+                        android:focusable="true"
+                        android:focusableInTouchMode="false" />
+
+                </com.google.android.material.textfield.TextInputLayout>
 
             </LinearLayout>
 
@@ -64,22 +68,18 @@
                 android:orientation="vertical"
                 android:padding="5dp">
 
-                <TextView
-                    android:id="@+id/textView14"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="Title:"
-                    android:textSize="20sp" />
-
-                <EditText
+                <com.google.android.material.textfield.TextInputLayout
                     android:id="@+id/edit_record_title_input"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:ems="10"
-                    android:hint="Oil Change"
-                    android:inputType="textPersonName"
-                    android:minHeight="48dp"
-                    android:textSize="20sp" />
+                    android:hint="Record Title">
+
+                    <com.google.android.material.textfield.TextInputEditText
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:inputType="text"
+                        />
+                </com.google.android.material.textfield.TextInputLayout>
             </LinearLayout>
 
             <LinearLayout
@@ -90,21 +90,27 @@
                 android:orientation="vertical"
                 android:padding="5dp">
 
-                <TextView
-                    android:id="@+id/textView15"
+                <com.google.android.material.textfield.TextInputLayout
+                    android:id="@+id/edit_record_vehicle_picker"
+                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="Vehicle:"
-                    android:textSize="20sp" />
+                    android:clickable="false"
+                    android:cursorVisible="false"
+                    android:focusable="true"
+                    android:focusableInTouchMode="false"
+                    android:hint="Vehicle">
 
-                <Spinner
-                    android:id="@+id/edit_record_vehicle_input"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:minHeight="48dp"
-                    android:scrollbarSize="20dp"
-                    android:spinnerMode="dialog"
-                    tools:ignore="SpeakableTextPresentCheck" />
+                    <AutoCompleteTextView
+                        android:id="@+id/edit_outlined_exposed_dropdown_editable"
+                        android:layout_height="wrap_content"
+                        android:layout_width="match_parent"
+                        android:clickable="false"
+                        android:cursorVisible="false"
+                        android:focusable="true"
+                        android:focusableInTouchMode="false"
+                        />
+                </com.google.android.material.textfield.TextInputLayout>
             </LinearLayout>
 
             <LinearLayout
@@ -115,22 +121,19 @@
                 android:orientation="vertical"
                 android:padding="5dp">
 
-                <TextView
-                    android:id="@+id/textView16"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="Odometer:"
-                    android:textSize="20sp" />
-
-                <EditText
+                <com.google.android.material.textfield.TextInputLayout
                     android:id="@+id/edit_record_odometer_input"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:ems="10"
-                    android:hint="123456"
-                    android:inputType="number"
-                    android:minHeight="48dp"
-                    android:textSize="20sp" />
+                    android:hint="Odometer Reading">
+
+                    <com.google.android.material.textfield.TextInputEditText
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:inputType="number"
+                        />
+
+                </com.google.android.material.textfield.TextInputLayout>
             </LinearLayout>
 
             <LinearLayout
@@ -141,22 +144,18 @@
                 android:orientation="vertical"
                 android:padding="5dp">
 
-                <TextView
-                    android:id="@+id/textView17"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="Notes:"
-                    android:textSize="20sp" />
-
-                <EditText
+                <com.google.android.material.textfield.TextInputLayout
                     android:id="@+id/edit_record_description_input"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:ems="10"
-                    android:hint="(Optional)"
-                    android:inputType="textMultiLine"
-                    android:minHeight="48dp"
-                    android:textSize="20sp" />
+                    android:hint="Notes (Optional)">
+
+                    <com.google.android.material.textfield.TextInputEditText
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:inputType="textMultiLine"
+                        />
+                </com.google.android.material.textfield.TextInputLayout>
             </LinearLayout>
 
             <LinearLayout
@@ -179,7 +178,7 @@
                     android:id="@+id/edit_record_finish_btn"
                     android:layout_width="@dimen/popout_btn_width"
                     android:layout_height="wrap_content"
-                    android:text="Update" />
+                    android:text="Finish" />
             </LinearLayout>
         </LinearLayout>
     </ScrollView>
