--- a/app/src/main/res/menu/toolbar_menu.xml
+++ b/app/src/main/res/menu/toolbar_menu.xml
@@ -6,7 +6,7 @@
         android:icon="@drawable/ic_search_dt"
         android:title="Search"
         app:actionViewClass="androidx.appcompat.widget.SearchView"
-        app:showAsAction="ifRoom" />
+        app:showAsAction="always" />
     <item
         android:id="@+id/filter_records"
         android:icon="@drawable/ic_filter_24"
@@ -17,5 +17,11 @@
         android:icon="@drawable/ic_sort"
         android:title="Sort"
         app:showAsAction="ifRoom"/>
+    <item
+        android:id="@+id/profile"
+        android:icon="@drawable/ic_profile"
+        android:title="Profile"
+        app:showAsAction="ifRoom"
+        />
 
 </menu>
