--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -1,5 +1,5 @@
 <resources>
-    <style name="MyAppTheme" parent="Theme.Material3.DayNight">
+    <style name="MyAppTheme" parent="Theme.Material3.Dark">
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
         <item name="fontFamily">sans-serif</item>
@@ -28,6 +28,11 @@
 
     <style name="AppTheme.Buttons" parent="MyAppTheme">
         <item name="android:textSize">16sp</item>
+    </style>
+
+    <style name="ToolbarTheme" parent="@style/ThemeOverlay.AppCompat.ActionBar">
+        <!-- Customize color of navigation drawer icon and back arrow -->
+        <item name="colorControlNormal">@color/black</item>
     </style>
 
 </resources>
