--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,14 +2,6 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-
-    <!--Default Theme-->
-
-    <!--Red Theme-->
-
-    <!--Blue Theme-->
-
-    <!--Green Theme-->
-
-    <!--Greyscale Theme-->
+    <color name="green">#FF00A100</color>
+    <color name="red">#FFBC0000</color>
 </resources>
