--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -6,4 +6,9 @@
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="min_btn_width">200dp</dimen>
     <dimen name="popout_btn_width">125dp</dimen>
+    <dimen name="app_bar_height">180dp</dimen>
+    <dimen name="fab_margin">16dp</dimen>
+    <dimen name="text_margin">16dp</dimen>
+    <dimen name="achievement_title">22sp</dimen>
+    <dimen name="achievement_description">18sp</dimen>
 </resources>
